objects/bofc__BOFC_Popup__c.object
<CustomObject>
    <fields>
        <fullName>bofc__Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bofc__Image__c</fullName>
        <formula>IMAGE( bofc__Image_URL__c , &quot;Photo&quot;,500,750)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Popup_First_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Popup First Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Popup_Second_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Popup Second Time?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Redirect_URL__c</fullName>
        <label>Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>bofc__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expire</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>AboutToExpire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FullVersion</fullName>
                </value>
                <value>
                    <fullName>FreeVersion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bofc__of_mins__c</fullName>
        <formula>(  NOW()-CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of mins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>BOFC Popup</label>
    <nameField>
        <label>BOFCPopup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Popup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>